made öffnungszeiten into html tables to get alignment correctly

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -368,14 +368,19 @@
   z-index: 2;
   background: rgba(250,250,250,1);
   padding-top: 40px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: auto;
 
 }
 
 .overlay-text-list {
-  //border: 2px solid lightblue;
+  order: 2px solid lightblue;
   font-size: 20px;
   list-style: none;
+}
+
+td{vertical-align: top;
 }
 
 @media screen and (max-width: $on-palm) {
@@ -669,10 +674,11 @@
  */
 
 .site-footer {
-  //border: 2px solid lightblue;
+  //border: 5px solid blue;
   padding-bottom: 20px;
   background-color: white;
-  border-top: 3px solid $green-color;
+  border-top: 4px solid $green-color;
+
 
   //padding: $spacing-unit 0;
 }
@@ -691,10 +697,15 @@
 
 .footer-flexbox-parent {
   //border: 5px solid red;
-  margin-left: 20px;
-  max-width: 800px;
-  margin: 0 auto;
-  //z-index: 2;
+  //margin-left: 20px;
+  //width: 100%;
+  padding-top:40px;
+  max-width: 1000px;
+  //margin: 0 auto;
+  margin-left:auto;
+  margin-right:auto;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -705,19 +716,26 @@
 
 .footer-flexbox-item {
   //border: 5px solid green;
-  margin-top: 40px;
   max-width: 250px;
+  background-color:white, 80%;
+  padding-top:10px;
+  padding-bottom: 10px;
 
 }
 
 .footer-flexbox-item:nth-child(1) {
   max-width: 200px;
   align-self: flex-start;
+}
 
+.contact-list{
+  font-size: 16px;
 }
 
 .map_image_container {
-  max-width: 800px;
+  //border: 3px solid green;
+  max-width: 1000px;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
 }
@@ -766,6 +784,8 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      margin-left:20px;
+      padding-top:20px;
     }
 
     .map_image_container {
